# DataCollector

./: CMakeLists.txt
libs/: CMakeLists.txt
libs/CollectorService/: CMakeLists.txt
libs/CollectorService/src/CollectorService/: DemoCollector.h  DiskUsageCollector.h  FilenameChecker.h  Help.h  Monitor.cpp  Monitor.h  main.cpp
libs/CollectorService/tests/: CMakeLists.txt  test_filenamechecker.cpp
libs/DataCollector/: CMakeLists.txt
libs/DataCollector/include/DataCollector/: CollectorBase.h  CollectorInstance.h  DataCollector_fwd.h  Prerequisites.h
libs/DataCollector/src/DataCollector/: CollectorBase.cpp  CollectorInstance.cpp
libs/DataPackager/: CMakeLists.txt
libs/DataPackager/include/DataPackager/: DataPackager_fwd.h  Prerequisites.h  TarPackager.h
libs/DataPackager/src/DataPackager/: TarPackager.cpp
libs/FileMonitor/: CMakeLists.txt
libs/FileSystemMonitor/: CMakeLists.txt
libs/FileSystemMonitor/include/FileSystemMonitor/: FileSystemMonitor_fwd.h  FolderMonitor.h  Prerequisites.h
libs/FileSystemMonitor/src/FileSystemMonitor/: FolderMonitor.cpp
libs/Helper/: CMakeLists.txt
libs/Utilities/: CMakeLists.txt
libs/Utilities/include/Utilities/: ConsoleHandler.h  Utilities.h  Utilities_fwd.h
libs/Utilities/src/Utilities/: ConsoleHandler.cpp
